[tool.poetry]
name = "adrijans-utils"
version = "0.1.0"
description = ""
authors = ["Adrijan Parmakovski <adrijan.parmakovski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyPDF2 = "3.0.1"
pycryptodome = "3.21.0"
pillow = "11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
